force-app/main/default/objects/G2Crowd__G2_Review__c/G2Crowd__G2_Review__c.object-meta.xml
<CustomObject>
    <label>G2 Review</label>
    <nameField>
        <label>G2 Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G2 Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>