force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__AccountId__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>