force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__Categories__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Categories__c</fullName>
    <label>Categories</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>