force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__Company_Segment__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Company_Segment__c</fullName>
    <label>Company Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>small-business</fullName>
            </value>
            <value>
                <fullName>mid-market</fullName>
            </value>
            <value>
                <fullName>enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>