force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__Company_Size__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self-employed</fullName>
            </value>
            <value>
                <fullName>1-10 employees</fullName>
            </value>
            <value>
                <fullName>51-200 employees</fullName>
            </value>
            <value>
                <fullName>201-500 employees</fullName>
            </value>
            <value>
                <fullName>501-1000 employees</fullName>
            </value>
            <value>
                <fullName>1001-5000 employees</fullName>
            </value>
            <value>
                <fullName>5001-10000 employees</fullName>
            </value>
            <value>
                <fullName>10001+ employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>