force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__Contact__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>G2 Reviews</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>