force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__G2_Product__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_Product__c</fullName>
    <label>G2 Product</label>
    <referenceTo>G2Crowd__G2_Product__c</referenceTo>
    <relationshipLabel>G2 Reviews</relationshipLabel>
    <relationshipName>G2_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>