force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__G2_Review_ID__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_Review_ID__c</fullName>
    <externalId>true</externalId>
    <label>G2 Review ID</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>