force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__G2_URL__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_URL__c</fullName>
    <label>G2 URL</label>
    <type>Url</type>
</CustomField>