force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__Industry__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Airlines/Aviation</fullName>
            </value>
            <value>
                <fullName>Alternative Dispute Resolution</fullName>
            </value>
            <value>
                <fullName>Alternative Medicine</fullName>
            </value>
            <value>
                <fullName>Animation</fullName>
            </value>
            <value>
                <fullName>Apparel &amp; Fashion</fullName>
            </value>
            <value>
                <fullName>Architecture &amp; Planning</fullName>
            </value>
            <value>
                <fullName>Arts and Crafts</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Aviation &amp; Aerospace</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Broadcast Media</fullName>
            </value>
            <value>
                <fullName>Building Materials</fullName>
            </value>
            <value>
                <fullName>Business Supplies and Equipment</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Civic &amp; Social Organization</fullName>
            </value>
            <value>
                <fullName>Civil Engineering</fullName>
            </value>
            <value>
                <fullName>Commercial Real Estate</fullName>
            </value>
            <value>
                <fullName>Computer &amp; Network Security</fullName>
            </value>
            <value>
                <fullName>Computer Games</fullName>
            </value>
            <value>
                <fullName>Computer Hardware</fullName>
            </value>
            <value>
                <fullName>Computer Networking</fullName>
            </value>
            <value>
                <fullName>Computer Software</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consumer Electronics</fullName>
            </value>
            <value>
                <fullName>Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Consumer Services</fullName>
            </value>
            <value>
                <fullName>Cosmetics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>