force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__NPS__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__NPS__c</fullName>
    <label>NPS</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>