force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__Role__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Role__c</fullName>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>