force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Star_Rating__c</fullName>
    <label>Star Rating</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>