force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Submitted_At__c</fullName>
    <label>Submitted At</label>
    <type>DateTime</type>
</CustomField>