force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__Title__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Title__c</fullName>
    <label>Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>