force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__Unattributed__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Unattributed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unattributed</label>
    <type>Checkbox</type>
</CustomField>