force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__User_Image__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__User_Image__c</fullName>
    <label>User Image</label>
    <type>Url</type>
</CustomField>