force-app/main/default/objects/G2Crowd__G2_Review__c/fields/G2Crowd__User_Name__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__User_Name__c</fullName>
    <label>User Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>