force-app/main/default/objects/G2Crowd__G2_Review__c/listViews/G2Crowd__All.listView-meta.xml
<ListView>
    <fullName>G2Crowd__All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>